--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ nav {
       }
   
       .section1{
-        background-image: url("/home/neosoft/HTML/assignment1.1/steven-van-loy-oUhSla4L_98-unsplash.jpg");
+        background-image: url("steven-van-loy-oUhSla4L_98-unsplash.jpg");
         background-size: cover;
         height: 700px;
         width: auto;
@@ -143,7 +143,7 @@ nav {
   
   
   .section3{
-      background-image: url("/home/neosoft/HTML/assignment1.1/rafting.jpg");
+      background-image: url("rafting.jpg");
       background-size: cover;
       height: 750px;
       width: auto;
@@ -201,7 +201,7 @@ nav {
   
   
   .gender{
-      background-image: url("/home/neosoft/HTML/assignment1.1/beach.jpg");
+      background-image: url("beach.jpg");
       background-size: cover;
       height: 1000px;
       width: auto;
@@ -256,7 +256,7 @@ nav {
   
   
   .clientReview{
-      background-image: url("/home/neosoft/HTML/assignment1.1/beach2.jpg");
+      background-image: url("beach2.jpg");
       background-size: cover;
       height: 700px;
       width: auto;
