--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ nav {
       }
   
       .section1{
-        background-image: url("/home/neosoft/HTML/assignment1.1/steven-van-loy-oUhSla4L_98-unsplash.jpg");
+        background-image: url("images/steven-van-loy-oUhSla4L_98-unsplash1.jpg");
         background-size: cover;
         height: 700px;
         width: auto;
