--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ nav {
   
   
   header{
-    background-color:#999999;
+    background-color:blue;
     text-align: center;
     height: 120px;
     width: auto;
