--- a/styles.css
+++ b/styles.css
@@ -46,8 +46,8 @@ nav {
         gap: 1rem;
         grid-auto-flow: column;
         }
-  
-  
+
+
   header{
     background-color:#999999;
     text-align: center;
@@ -69,9 +69,9 @@ nav {
         outline: 2px solid white;
         font: 18px Arial, sans-serif;
       }
-  
+
       .section1{
-        background-image: url("steven-van-loy-oUhSla4L_98-unsplash1.jpg");
+        background-image: url("images/steven-van-loy-oUhSla4L_98-unsplash1.jpg");
         background-size: cover;
         height: 700px;
         width: auto;
@@ -99,15 +99,15 @@ nav {
         padding: 20px 40px;
         margin: 150px 299px;
         background-color: green;
-  
+
         }
       #article{
         margin-top:100px;
         font:60px American Typewriter, serif;
         padding: 0 200px;
       }
-  
-  
+
+
   .section2{
       background-color: white;
       height: 900px;
@@ -132,7 +132,7 @@ nav {
             content: '✓ ';
             color: green;
             }
-  
+
         #imageBaby{
           outline: 10px solid gray;
           height:500px;
@@ -140,10 +140,10 @@ nav {
           margin-top:300px;
           margin-left:30px;
             }
-  
-  
+
+
   .section3{
-      background-image: url("afting1.jpg");
+      background-image: url("images/rafting1.jpg");
       background-size: cover;
       height: 750px;
       width: auto;
@@ -165,16 +165,16 @@ nav {
       display:flex;
       flex-wrap: wrap;
       column-gap:none;
-  
+
     }
-  
+
       .numicon{
         font-size:20px;
       }
-  
+
       .dashed{
         width: 120px;
-  
+
       }
       .emoji{
         font-size: 80px;
@@ -186,7 +186,7 @@ nav {
         height:100px;
         width: 100px;
               }
-  
+
       .search2{
       background-color:white;
       border:9px solid green;
@@ -197,11 +197,11 @@ nav {
       margin-right: 30%;
       opacity: 1.5;
     }
-  
-  
-  
+
+
+
   .gender{
-      background-image: url("beach1.jpg");
+      background-image: url("images/beach1.jpg");
       background-size: cover;
       height: 1000px;
       width: auto;
@@ -230,7 +230,7 @@ nav {
         margin-top: -30px;
         width: 30%;
         opacity: 0.9;
-  
+
       }
       .male{
         background-color: white;
@@ -245,7 +245,7 @@ nav {
         height: 120px;
         margin: 10px 200px;
         }
-  
+
         #emoji{
           outline: 3px solid green;
           border-radius: 100%;
@@ -253,10 +253,10 @@ nav {
           height:100px;
           width: 100px;
                 }
-  
-  
+
+
   .clientReview{
-      background-image: url("beach21.jpg");
+      background-image: url("images/beach21.jpg");
       background-size: cover;
       height: 700px;
       width: auto;
@@ -265,7 +265,7 @@ nav {
       flex-wrap: wrap;
       column-gap:10px;
   }
-  
+
   .posts{
       background-color:  white;
       height: 1000px;
@@ -276,7 +276,7 @@ nav {
       column-gap:30px;
       padding-left: 15%;
         }
-  
+
         .postHead{
           height: 200px;
           width: 60%;
@@ -286,7 +286,7 @@ nav {
           padding:0 150px;
           margin-bottom: -15px;
         }
-  
+
         .post1, .post2, .post3{
           background-color: white;
           border-radius: 5px;
@@ -296,18 +296,18 @@ nav {
           width: 400px;
           opacity: 0.9;
         }
-  
+
         .images{
           height: 250px;
           width:100%;
           margin-bottom: 1px;
           }
-  
+
         .previous{
           margin: 100px 0 100px 300px;
           width:100px;
           font-size: 40px;
-  
+
         }
         .forward{
           margin: 100px 0 100px 10px;
@@ -327,7 +327,7 @@ nav {
           height:200px;
           width: 200px;
                 }
-  
+
   footer{
     background-color:#999999;
     text-align: center;
@@ -340,7 +340,7 @@ nav {
     flex-wrap: wrap;
     column-gap:20px;
   }
-  
+
   .footer1 {
     background-color: #333333;
     height: 900px;
@@ -366,9 +366,9 @@ nav {
     #info{
       width: 400px;
     }
-  
-  
-  
+
+
+
   .footer2 {
     background-color:  black;
     height: 80px;
@@ -380,7 +380,7 @@ nav {
     column-gap:10px;
     text-align: center;
   }
-  
+
     .fa {
     padding: 5px;
     font-size: 5px;
@@ -390,49 +390,48 @@ nav {
     margin: 2px 5px;
     border-radius: 50px;
     }
-  
+
       .fa:hover {
       opacity: 0.7;
       }
-  
+
       .fa-facebook {
       background: black;
       outline: 2px solid white;
       color: white;
       }
-  
+
       .fa-twitter {
       background: black;
       outline: 2px solid white;
       color: white;
       }
-  
+
       .fa-google {
       background: black;
       outline: 2px solid white;
       color: white;
       }
-  
+
       .fa-linkedin {
       background: black;
       outline: 2px solid white;
       color: white;
       }
-  
+
       .fa-youtube {
       background: black;
       outline: 2px solid white;
       color: white;
       }
-  
+
   .footer3 {
     background-color:  white;
     height: 40px;
     width: auto;
     margin-bottom:00px;
     padding:10px;
-    display:flex; 
+    display:flex;
     flex-wrap: wrap;
     column-gap:10px;
   }
-  
